--- a/index.html
+++ b/index.html
@@ -67,21 +67,18 @@
 </div>
 
 <div id="main" class="main-container" style="display:none;">
-  <h2>Chào mừng bạn!</h2>
   <p>Chọn một chức năng:</p>
 </div>
 
 <div id="menu" class="menu" style="display:none;">
   <ul>
-    <li onclick="showFunction(1)">Chức năng 1: Quản lý người dùng</li>
-    <li onclick="showFunction(2)">Chức năng 2: Thêm sản phẩm</li>
-    <li onclick="showFunction(3)">Chức năng 3: Xem báo cáo</li>
-    <li onclick="showFunction(4)">Chức năng 4: Gửi thông báo</li>
-    <li onclick="showFunction(5)">Chức năng 5: Đổi mật khẩu</li>
-    <li onclick="showFunction(6)">Chức năng 6: Thống kê doanh thu</li>
-    <li onclick="showFunction(7)">Chức năng 7: Quản lý đơn hàng</li>
-    <li onclick="showFunction(8)">Chức năng 8: Hỗ trợ khách hàng</li>
-    <li onclick="showFunction(9)">Chức năng 9: Cài đặt hệ thống</li>
+    <li onclick="showFunction(1)">Chức năng 1: AImLock</li>
+    <li onclick="showFunction(2)">Chức năng 2: Buff màn</li>
+    <li onclick="showFunction(3)">Chức năng 3: Buff dpi</li>
+    <li onclick="showFunction(4)">Chức năng 4: Tâm ảo ẩn</li>
+    <li onclick="showFunction(5)">Chức năng 5: Buff nhạy</li>
+    <li onclick="showFunction(6)">Chức năng 6: Dpi config bấm vào chức năng 7</li>
+    <li onclick="showFunction(7)">Chức năng 7: https://www.mediafire.com/file/lbwpcpg4aiwuzir/Dpi+config+demo.mobileconfig/file</li>
     <li onclick="showFunction(10)">Chức năng 10: Đăng xuất</li>
   </ul>
 </div>
